--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
+    "genkitx-openai": "^0.26.0",
     "html2canvas": "^1.4.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
