--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
+    "puppeteer": "^24.31.0",
     "react": "^18.3.1",
     "react-compare-slider": "^3.1.0",
     "react-cropper": "^2.3.3",
