--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdk": "^1.0.0",
     "cropperjs": "^1.6.2",
     "date-fns": "^3.6.0",
+    "docx": "^9.5.1",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
@@ -50,9 +51,12 @@
     "html2canvas": "^1.4.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
+    "mammoth": "^1.11.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.449",
+    "pptxgenjs": "^4.0.1",
     "puppeteer": "^24.31.0",
     "react": "^18.3.1",
     "react-compare-slider": "^3.1.0",
@@ -61,10 +65,13 @@
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.0.7",
     "react-hook-form": "^7.54.2",
+    "react-image-crop": "^11.0.10",
     "react-markdown": "^9.0.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "youtube-transcript": "^1.2.1",
+    "youtubei.js": "^16.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
