--- a/package.json
+++ b/package.json
@@ -52,17 +52,17 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
     "mammoth": "^1.11.0",
-    "next": "15.3.3",
+    "next": "^15.3.6",
     "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.449",
     "pptxgenjs": "^4.0.1",
     "puppeteer": "^24.31.0",
-    "react": "^18.3.1",
+    "react": "^19.2.1",
     "react-compare-slider": "^3.1.0",
     "react-cropper": "^2.3.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.2.1",
     "react-easy-crop": "^5.0.7",
     "react-hook-form": "^7.54.2",
     "react-image-crop": "^11.0.10",
