--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
@@ -45,7 +45,6 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
-    "firebase": "^11.9.1",
     "genkit": "^1.20.0",
     "genkitx-openai": "^0.26.0",
     "html2canvas": "^1.4.1",
@@ -53,6 +52,7 @@
     "lucide-react": "^0.475.0",
     "mammoth": "^1.11.0",
     "next": "^15.3.6",
+    "nodemailer": "^7.0.11",
     "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.449",
@@ -79,6 +79,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/jszip": "^3.4.1",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.20.0",
